syntax = "proto3";

package pb;

option go_package = "./pb";
// import "google/protobuf/empty.proto";

message Product{
    string id = 1;
    string name = 2;
    string description = 3;
    int64 price = 4;
    int32 stock = 5;
}

service ProductService{
    rpc CreateProduct(CreateProductRequest) returns (Product);
    rpc GetAllProduct(GetAllProductRequest) returns (GetAllProductResponse);
    rpc GetProduct(GetProductRequest) returns (Product);
    rpc UpdateProduct(UpdateProductRequest) returns (Product);
    rpc DeleteProduct(DeleteProductRequest) returns (Product);
}

message CreateProductRequest{
    Product product = 1;
}

message GetAllProductRequest{}

message GetAllProductResponse{
    repeated Product products = 1;
}

message GetProductRequest{
    string id = 1;
}

message UpdateProductRequest{
    Product product = 1;
}

message DeleteProductRequest{
    string id = 1;    
}